--- a/templates/user/users.html.twig
+++ b/templates/user/users.html.twig
@@ -6,12 +6,17 @@
         <div class="row">
             <div class="col-12">
                 <a class="btn" href="{{ path('userNew') }}">Create</a>
+                {% if order == 'ASC' %}
+                  {%  set order = 'DESC' %}
+                {% else %}
+                    {%  set order = 'ASC'  %}
+                {% endif %}
                 <table class="table table-dark">
                     <thead>
                     <tr>
                         <th scope="col">#</th>
-                        <th id="sortByName" scope="col">Name</th>
-                        <th id="sortByEmail" scope="col">Email</th>
+                        <th id="sortByName" scope="col"><a href="{{ path('usersAll', {'orderBy': 'name', 'order': order}) }}">Name</a></th>
+                        <th id="sortByEmail" scope="col"><a href="{{ path('usersAll', {'orderBy': 'email', 'order': order}) }}">Email</a></th>
                         <th scope="col">Role</th>
                     </tr>
                     </thead>
